# ValuAItion

./: .gitignore  LICENSE  README.md  data_config.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS
src/data/: constants.py  download.py  process.py  transforms.py
src/model/: evaluate.py  training_single.py  utils.py
