
[project]
name = "valuaition"
version = "0.1.0"
description = "Predicting valuation prices of danish properties using machine learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.7",
    "joblib==1.4.2",
    "jupyter==1.1.1",
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "optuna==4.0.0",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "python-dotenv==1.0.1",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "torch>=2.5.1",
    "wget==3.2",
    "xgboost==2.1.2",
]